2014-03-18      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2except.c:  do_call0 (New function).
	  do_call1 (New function).  do_call3 (New function).
	  build_exc_ptr (rewritten to use do_call1).
	  do_free_exception (rewritten to use do_call1).
	  do_throw (rewritten to use do_call3).
	  do_rethrow (rewritten to use do_call0).
          gm2_build_throw (removed unused local variables).
	  do_begin_catch (rewritten to use do_call1).
	  do_end_catch (rewritten to use do_call0).
	* gm2/gm2-lang.c:  genericize_try_block (New function).
	  genericize_catch_block (New function).
	  gm2_langhook_gimplify_expr call genericize_try_block
	  and genericize_catch_block.

2014-03-12      Gaius Mulley <gaius@gnu.org>

	* changed persmissions to most files to remove the execute
          bit.

2014-03-12      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  fixed verify flags for gm2.verifyparanoid
	  and gm2.verifystage12.
	* gm2/gm2-libs-iso/M2RTS.mod:  detect double HALT and exit with
	  -1.
	* gm2/gm2-libs/M2RTS.mod:  detect double HALT and exit with
	  -1.
	* gm2/gm2-libs/Indexing.mod:  use memmove rather than memcpy
	  which fixes the regression testsuite/gm2/isolib/run/pass/termfile.mod.
	* gm2/gm2-libs/libc.def:  provide definition for memmove.

2014-02-19      Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  include the search path  -I$(srcdir)/gm2/gm2-gcc
	  when building stage2 from the compiler sources.
	* gm2/bnf/gm2l.bnf:  import Dup from DynamicStrings.
	* gm2/gm2-compiler/M2ALU.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2Base.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.
	* gm2/gm2-compiler/M2Preprocess.mod:  corrected import of
	  CppCommandLine from M2Options rather than M2DriverOptions.
	* gm2/gm2-compiler/M2Range.mod:  fixed many imports so that
	  the module can be built during stage2, via xgm2.