@@ -24,9 +24,11 @@ load_lib gm2-torture.exp
 
 gm2_init "-I.:../gm2/gm2-libs-iso:$srcdir/../gm2/gm2-libs-iso:$srcdir/../gm2/gm2-libs:../gm2/gm2-libs:$srcdir/gm2/calling-c/datatypes/unbounded/run/pass" -fiso -L../gm2/gm2-libs-iso -L../gm2/gm2-libs
 
-gm2_link_with "c.o"
+set XGCC [lookfor_file $tmpdir xgcc];
+
+gm2_link_with c.o
 set output [exec rm -f c.o]
-set output [exec gcc -g -c $srcdir/gm2/calling-c/datatypes/unbounded/run/pass/c.c -o c.o]
+set output [exec ${XGCC} -B[file dirname $tmpdir] -g -c $srcdir/gm2/calling-c/datatypes/unbounded/run/pass/c.c -o c.o]
 
 foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
     # If we're only testing specific files and this isn't one of them, skip it.
