@@ -23,9 +23,13 @@ if $tracelevel then {
 load_lib gm2-torture.exp
 
 gm2_init "-I$srcdir/gm2/types/run/pass:$srcdir/../gm2/gm2-libs:$srcdir/../gm2/pim/pass:$srcdir/../gm2/gm2-compiler:../gm2/gm2-libs:../gm2/gm2-compiler" -fpim -L../gm2/gm2-libs-pim -L../gm2/gm2-libs -L../gm2-libs-iso
+
 gm2_link_with d.o
+
+set XGCC [lookfor_file $tmpdir xgcc];
+
 set output [exec rm -f d.o]
-set output [exec gcc -g -c $srcdir/gm2/types/run/pass/d.c -o d.o]
+set output [exec ${XGCC} -B[file dirname $tmpdir] -g -c $srcdir/gm2/types/run/pass/d.c -o d.o]
 
 foreach testcase [lsort [glob -nocomplain $srcdir/$subdir/*.mod]] {
     # If we're only testing specific files and this isn't one of them, skip it.
